<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>Examples of publisher/subscriber using rclcpp</description>
  <maintainer email="gingakennis123@icloud.com">Ginga Kennis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Declare the package needs rclcpp and std_msgs when its code is build and executed -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- For launch -->
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
